--- a/scss/_aside.scss
+++ b/scss/_aside.scss
@@ -1,10 +1,11 @@
-aside{
-    .aside__{
-        grid-area: aside;
-        height: 350px;
-        .publicidad_ {
-            width: 1220px;
-            height: auto; }
-
+.aside__{
+    grid-area: aside;
+    width: auto;
+    height: 350px;
     }
+
+.publicidad_ {
+    width: 1220px;
+    height: auto; 
 }
+ 
