--- a/scss/_ofertas.scss
+++ b/scss/_ofertas.scss
@@ -9,7 +9,8 @@
         justify-content: center;
         padding-left: 130px;
         .Sub_content:hover {
-            color: red; }
+            color: red; 
+        }
         .title_ofertas {
             font-size: 30px;
             font-family: fantasy;
